force-app/main/default/objects/Site_Visit__c/Site_Visit__c.object-meta.xml
<CustomObject>
    <label>Site Visit</label>
    <nameField>
        <displayFormat>SiteVisit-{0000}</displayFormat>
        <label>Site Visits Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>