force-app/main/default/objects/Site_Visit__c/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <formula>Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Date</label>
    <type>DateTime</type>
</CustomField>