force-app/main/default/objects/Site_Visit__c/fields/Contact1__c.field-meta.xml
<CustomField>
    <fullName>Contact1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZLead</label>
    <referenceTo>lead__c</referenceTo>
    <relationshipLabel>Site Visit</relationshipLabel>
    <relationshipName>Site_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>