force-app/main/default/objects/Site_Visit__c/fields/CP_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Name__c</fullName>
    <formula>if(Source__c == &apos;Channel Partner&apos;,SLead__r.CP_Id__c,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Name</label>
    <type>Text</type>
</CustomField>