force-app/main/default/objects/Site_Visit__c/fields/Enter_OTP__c.field-meta.xml
<CustomField>
    <fullName>Enter_OTP__c</fullName>
    <label>Enter OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>