force-app/main/default/objects/Site_Visit__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <formula>SLead__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>