force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Conducted__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &apos;Completed&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Conducted</label>
    <type>Checkbox</type>
</CustomField>