force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Create_Owner__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Create_Owner__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos;+  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Create Owner</label>
    <type>Text</type>
</CustomField>