force-app/main/default/objects/Site_Visit__c/fields/Site_Visits__c.field-meta.xml
<CustomField>
    <fullName>Site_Visits__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>