force-app/main/default/objects/Site_Visit__c/fields/Source1__c.field-meta.xml
<CustomField>
    <fullName>Source1__c</fullName>
    <formula>text( Contact1__r.Leadsource__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZSource</label>
    <type>Text</type>
</CustomField>