force-app/main/default/objects/Site_Visit__c/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <formula>if(Enquiry_Source__c != null, Enquiry_Source__c,SLead__r.Sub_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Source</label>
    <type>Text</type>
</CustomField>