force-app/main/default/objects/Site_Visit__c/validationRules/Canceled_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Cancelled&apos;),ISBLANK( Canceled_Reason__c ))</errorConditionFormula>
    <errorMessage>Please Mention Canceled Reason</errorMessage>
</ValidationRule>