force-app/main/default/objects/Site_Visit__c/validationRules/Feed_back_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Feed_back_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Completed&apos;),ISBLANK(Feedback__c))</errorConditionFormula>
    <errorDisplayField>Feedback__c</errorDisplayField>
    <errorMessage>Please Give Some Feedback</errorMessage>
</ValidationRule>