force-app/main/default/objects/Site_Visit__c/validationRules/Reschedule_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reschedule_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Rescheduled&apos;),ISBLANK(  Reschedule_Date__c  ))</errorConditionFormula>
    <errorMessage>Please Select Reschedule Data and Time</errorMessage>
</ValidationRule>