force-app/main/default/objects/Site_Visit__c/validationRules/Schedule_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Date</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
    ISNEW(), 
    IF(Date__c &lt; NOW(), true, false), 
    IF(
        Reschedule_Date__c != null, 
        IF(Reschedule_Date__c &lt; NOW(), true, false), 
        false
    )
)</errorConditionFormula>
    <errorMessage>Please Don&apos;t Enter Past Date and Time</errorMessage>
</ValidationRule>