force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lead_Name__c</columns>
    <columns>Sub_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead_Status__c</columns>
    <columns>Feedback__c</columns>
    <columns>Primary_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>