force-app/main/default/objects/Site_Visit__c/listViews/Site_Visit_Conducted_This_Month.listView-meta.xml
<ListView>
    <fullName>Site_Visit_Conducted_This_Month</fullName>
    <columns>Project__c</columns>
    <columns>Source__c</columns>
    <columns>Sub_Source__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SLead__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Visit_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Site Visit Conducted This Month</label>
</ListView>